# tbm-utils

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
docs/: Makefile  conf.py  index.md  index.rst  make.bat
src/tbm_utils/: __about__.py  __init__.py  config.py  datetime.py  decorators.py  humanize.py  io.py  misc.py  structures.py
tests/: test_cli.py  test_config.py  test_datetime.py  test_decorators.py  test_humanize.py  test_io.py  test_misc.py  test_path.py  test_structures.py
